--- a/XMLAexplorer.html
+++ b/XMLAexplorer.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+<!--
+ *   This file is part of the XMLA Explorer project
+ *
+ *   Copyright (C) 2014 OpenLink Software
+ *
+ *   This project is free software; you can redistribute it and/or modify it
+ *   under the terms of the GNU General Public License as published by the
+ *   Free Software Foundation; only version 2 of the License, dated June 1991.
+ *
+ *   This program is distributed in the hope that it will be useful, but
+ *   WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ *   General Public License for more details.
+ *
+ *   You should have received a copy of the GNU General Public License along
+ *   with this program; if not, write to the Free Software Foundation, Inc.,
+ *   51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
+-->
   <head>
-    <title>XMLA explorer</title>
+    <title>XMLA Explorer</title>
     <script type="text/javascript" src="xmla_min.js"></script>
     <script type="text/javascript" src="webdb_xmla_min.js"></script>
     <script type="text/javascript" src="./ample/runtime.js"></script>
